@@ -15,6 +15,8 @@ Changelog
   [keul]
 * added i18n support and italian translation [keul]
   [keul]
+* changes AJAX calling context, now always calling portal root URL
+  [keul]
 
 0.3.0 (2011-06-07)
 ------------------
